# MBU_Udskrivning_Fritvalg

./: .pylintrc  @AutomationLog.txt  README.md  main.py  pyproject.toml
GPUCache/: data_0  data_1  f_000001  f_000002  index
robot_framework/: config.py  exceptions.py  linear_framework.py  process.py  queue_framework.py  reset.py
robot_framework/subprocesses/: db_utils.py  helper_functions.py  initalize.py
robot_framework/subprocesses/initalization/: edi_portal_check_contractor_data.py  initalize.py
robot_framework/subprocesses/process/document/: create_medical_record.py  handle_discharge_document.py  send_discharge_document.py
robot_framework/subprocesses/process/edi/: edi_portal_functions.py  edi_portal_handler.py  get_files_for_edi_portal.py
robot_framework/subprocesses/process/patient/: create_booking_reminders.py  create_event.py  update_patient_info.py
robot_framework/subprocesses/process/romexis/: db_handler.py  image_handler.py  romexis_images_handler.py  zip_handler.py
robot_framework/subprocesses/reset/: clean_up.py  close_applications.py
