[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MBU_Udskrivning_0-21aar"
version = "1.0.11"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.3.1",
    "Pillow == 11.3.0",
    "mbu-dev-shared-components == 3.0.4",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "robot_framework",
]
